--- a/src/sass/hongte.scss
+++ b/src/sass/hongte.scss
@@ -39,12 +39,28 @@
         width: 25%;
     }
 
+    &.hongte-item-2 .el-form-item {
+        width: 50%;
+    }
+
+    &.hongte-item-4 .el-form-item {
+        width: 25%;
+    }
+
+    &.hongte-item-3 .el-form-item {
+        width: 33%;
+    }
+
         .el-form-item__label {
-            flex: 1;
+            width: 120px;
+            max-width: 150px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .el-form-item__content {
-            flex: 3;
+            flex: 1;
         }
 
         .el-select {
