--- a/src/sass/hongte.scss
+++ b/src/sass/hongte.scss
@@ -7,6 +7,10 @@
     .cell {
         display: flex;
         justify-content: space-around;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        text-align: center;
     }
         
         .cell > .el-button {
